# PinBallGame

./: CMakeLists.txt  README.md  class.puml  feedback.md  main.cpp  physicsTest.cpp  pinballGame.cpp  uml diagram.puml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: config.yml
include/: GameObjects.hpp  PlayingField.hpp  bordGen.hpp  gameLogic.hpp  gameObjects.hpp  gameScene.hpp  keyInput.hpp  keyinput.hpp  utils.hpp
include/GameObjects/: BallGuidesObject.hpp  BouncyCylinders.hpp  FlipperObject.hpp  GameObjects.hpp  LightShieldObject.hpp  PlungerObject.hpp  bouncyCylinders.hpp
src/: CMakeLists.txt  GameObjects.cpp  boardGen.cpp  gameObjects.cpp  objectsLogic.cpp  utils.cpp
src/GameObjects/: BallGuidesObject.cpp  FlipperObject.cpp  PlungerObject.cpp
tests/: CMakeLists.txt  test_BallGuidesObject.cpp  test_FlipperObject.cpp  test_LightShieldObject.cpp  test_PlungerObject.cpp  test_bouncyCylinders.cpp  test_gameLogic.cpp  test_utils.cpp
tests/manualTests/: CMakeLists.txt  physicsTest.cpp
